# sop_creator

./: .gitignore  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  setup.py
career_tool/: __init__.py  career_fit_analyzer.py  cover_letter.py  file_utils.py  job_description.py  resume.py  resume_ai_recommendation.py  word_utils.py
career_tool/utils/: constants.py  file_utils.py  secret_manager_utils.py  session_utils.py  string_utils.py  word_utils.py
db_operations/: db_operations.sql
templates/: index.html  new_index.html  text_editor.html  text_editor2.html  text_editor3.html
templates/fronend/components/: Button.js  Recomendation.js
templates/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
templates/frontend/app/: Providers.js  globals.css  layout.js  page.js
templates/frontend/app/api/: google-docs.js  route.js
templates/frontend/app/api/auth/[...nextauth]/: route.js
templates/frontend/app/api/recommendation/: route.js
templates/frontend/app/coverletter/: page.js
templates/frontend/app/resume/: page.js
templates/frontend/components/: AnalysisContainer.js  AnalysisResult.js  ApryseEditor.js  Body.js  Button.js  ButtonSubmit.js  DocxArranger.js  DocxEditor.js  FileUpload.js  Header.js  Jobds.js  KeyValuePair.js  LoadingSpinner.js  Result.js  ResumeContainer.js  SignificantTerms.js  TextAnimation.js
templates/frontend/components/Authentication/: Analysis.js  AuthMain.js  Signout.js
templates/frontend/components/Footer/: Footer.js
templates/frontend/components/Header/: Auth.js  Brand.js  Header.js  Inpupt.js  Input.js  Logo.js  NavLink.js  Navbar.js  ProductList.js  Profile.js  ProfileDetail.js  SignIn.js  SignParent.js  SignUp.js
templates/frontend/components/LandingPage/: Attraction.js  Auth.js  BodyLandingPage.js  ElaboratBG.js  Footer.js  FooterContact.js  Header.js  Logo.js  Navbar.js  Promo.js  ResumeImages.js  TextAnimation.js  TitleCard.js  body.js  page.js
templates/frontend/components/Resume/: AnalysisContainer.js  AnalysisResult.js  BodyResume.js  Button.js  DocxArranger.js  GoogledocEditor.js  Header.js  ResumeContainer.js  SignificantTerms.js
templates/frontend/redux/: store.js
templates/frontend/redux/features/: auth-slice.js  recommend-slice.js
templates/frontend/src/: setupProxy.js
tests_functional/: conftest.py
tests_unit/: conftest.py
tests_unit/utils/: test_string_utils.py
utils/: __init__.py  constants.py  cover_letter.py  database_utils.py  file_utils.py  http_utils.py  job_description.py  job_description_utils.py  llm_utils.py  pdf_utils.py  resume.py  resume_analyzer.py  resume_to_plain_text.py  resume_utils.py  secret_manager_utils.py  stop_word_list.py  string_utils.py  word_utils.py
